--- a/app/styles/index.sass
+++ b/app/styles/index.sass
@@ -722,6 +722,7 @@ form[representative]
   hr
     margin-top: 32px
     margin-bottom: 24px
+    max-width: 100%
     width: 100%
   h3
     color: $color-dark
