Fix CSS image cache busting.

--- a/app/styles/index.sass
+++ b/app/styles/index.sass
@@ -198,7 +198,7 @@ header
         font-size: 16px
         visibility: visible
       &:after
-        content: url('../../images/icon_caret.svg')
+        content: url('./images/icon_caret.svg')
         display: inline-block
         margin-left: 5px
   > label
@@ -241,7 +241,7 @@ header[fixed]
     h3
       color: $color-medium
       &[mobile]:after
-        content: url('../../images/icon_caret-green.svg')
+        content: url('./images/icon_caret-green.svg')
     span[tagline]
       color: $color-black
     span[pipe]
@@ -249,7 +249,7 @@ header[fixed]
     label
       color: $color-medium
       &:after
-        content: url('../../images/icon_caret-green.svg')
+        content: url('./images/icon_caret-green.svg')
   label
     color: $color-black
   span[tagline]
@@ -411,7 +411,7 @@ article
       margin-left: $gutter
       margin-right: $gutter
     button
-      background: url(../../images/ctrl_audio-play.svg) no-repeat center $color-medium
+      background: url(./images/ctrl_audio-play.svg) no-repeat center $color-medium
       border: 0
       display: block
       outline: 0
@@ -617,7 +617,7 @@ article
       margin-left: 60px
       padding: 0 0 0 $gutter
     &:before
-      background: url('../../images/icon_pullquote.svg') left top no-repeat
+      background: url('./images/icon_pullquote.svg') left top no-repeat
       content: ""
       display: block
       filter: grayscale(20%)
