Rename app/javascripts to app/scripts, just because.

--- a/app/styles/index.sass
+++ b/app/styles/index.sass
@@ -46,6 +46,7 @@ $color-white: #FFF
 $color-grey: #6C7579
 $color-grey-medium: #bcbebd
 $color-grey-light: #DEE4E5
+$color-orange: #ec8a45
 
 $screen-mobile: 500px
 $screen-tablet: 896px
