Add links to credits.

--- a/app/styles/index.sass
+++ b/app/styles/index.sass
@@ -1035,7 +1035,11 @@ footer
       span[title]
         font-weight: 500
         text-transform: uppercase
-      address
+      address a
         color: $color-medium
         font-style: normal
+        text-decoration: none
+        &:hover
+          text-decoration: underline
+
 
