Unify button font.

--- a/app/styles/index.sass
+++ b/app/styles/index.sass
@@ -558,7 +558,7 @@ article
         color: $color-medium
         cursor: pointer
         display: inline-block
-        font-family: $sans-alt
+        font-family: $sans
         font-size: 13px
         font-weight: 400
         margin-bottom: 31px
@@ -761,7 +761,7 @@ aside[feedback]
     border: 1px solid $color-medium
     color: $color-medium
     cursor: pointer
-    font-family: $sans-alt
+    font-family: $sans
     font-size: 13px
     font-weight: 600
     margin-bottom: 20px
@@ -840,7 +840,7 @@ form[representative]
     color: $color-medium
     cursor: pointer
     display: inline-block
-    font-family: $sans-alt
+    font-family: $sans
     font-size: 11.2px
     font-weight: 600
     height: 29px
@@ -903,6 +903,7 @@ form[representative]
           padding-left: 10px
           padding-right: 10px
         span
+          // the part between the buttons that says "or"
           color: $color-grey
           font-family: $sans-alt
           font-size: 12.8px
