Correct color of drawer button.

--- a/app/styles/index.sass
+++ b/app/styles/index.sass
@@ -210,6 +210,7 @@ header
     border: 0
     color: $color-white
     cursor: pointer
+    display: flex
     font-family: $sans
     line-height: normal
     outline: 0
@@ -222,6 +223,9 @@ header
         display: none
     @media (max-width: 768px)
       right: 18px
+    img
+      // the icon in the label
+      margin-right: 5px
 
 
 header[top]
