--- a/app/styles/index.sass
+++ b/app/styles/index.sass
@@ -381,11 +381,14 @@ article
     // the publishedAt timestamp and byline
     color: $color-grey
     font-family: $sans
-    font-size: 18px
+    font-size: 15px
+    font-style: normal
+    font-weight: 300
     max-width: 675px
     text-align: center
     a
       color: $color-medium
+      font-weight: 500
       text-decoration: none
 
 
