--- a/app/styles/index.sass
+++ b/app/styles/index.sass
@@ -506,13 +506,14 @@ article
         font-style: normal
         font-weight: 500
         line-height: 19.8px
-        address
+        address a
           color: $color-medium
           display: inline
           font-size: 13.7px
           font-style: normal
           font-weight: 400
           line-height: 21.5px
+          text-decoration: none
           text-transform: uppercase
 
 
@@ -705,13 +706,14 @@ article
       @media (max-width: $width + ($gutter * 2))
         margin-left: 20px
         margin-right: 20px
-      address
+      address a
         color: $color-medium
         display: inline
         font-size: 13.68px
         font-style: normal
         font-weight: 400
         line-height: 21.5px
+        text-decoration: none
         text-transform: uppercase
 
 
